--- a/ford-hatchback-eco.html
+++ b/ford-hatchback-eco.html
@@ -781,7 +781,7 @@
         <hr>
         <div class="row" id="footer-menu">
             <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-                <a href="index.html"><img src="/image/logocarts.png" alt="logo1"></a>
+                <a href="index.html"><img src="image/logocarts.png" alt="logo1"></a>
                 <ul>
                     <li><a href="preowned-car.html">PreOwned Car</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
