--- a/ford-sedan-fusion.html
+++ b/ford-sedan-fusion.html
@@ -387,7 +387,7 @@
                     </p>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 wow fadeInRight" data-wow-delay="0.5s">
-                    <img style="margin-top: 10rem;width: 100%;" src="/image/ford sedan fusion/desktop.png" class="img-responsive">
+                    <img style="margin-top: 10rem;width: 100%;" src="image/ford sedan fusion/desktop.png" class="img-responsive">
                 </div>
             </div>
         </div>
