--- a/about.html
+++ b/about.html
@@ -64,10 +64,10 @@
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
 							aria-expanded="false">RANGE OF CARS <span class="caret"></span></a>
 						<ul class="dropdown-menu dropdowncostume">
-							<li><a href="#hatchback">HatchBack</a></li>
-							<li><a href="#mvp">MPV / Van</a></li>
-							<li><a href="#sedan">Sedan</a></li>
-							<li><a href="#crossover">SUV / Crossover</a></li>
+							<li><a href="index.html#hatchback">HatchBack</a></li>
+							<li><a href="index.html#mpv">MPV / Van</a></li>
+							<li><a href="index.html#sedan">Sedan</a></li>
+							<li><a href="index.html#crossover">SUV / Crossover</a></li>
 						</ul>
 					</li>
 					<li><a href="preowned-car.html">PreOwned CARS</a></li>
