--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand logo wow fadeInDown" data-wow-delay="0.8s" href="index.html"><img
+					<a class="navbar-brand logo" href="index.html"><img
 							src="image/logocar1.jpg" alt="logo"></a>
 				</div>
 			</div>
-			<div class="collapse navbar-collapse wow fadeInDown" data-wow-delay="0.8s" id="upmenu">
+			<div class="collapse navbar-collapse" id="upmenu">
 				<ul class="nav navbar-nav" id="navbarontop">
 					<li class="active"><a href="index.html">HOME</a> </li>
 					<li class="dropdown">
