--- a/index.html
+++ b/index.html
@@ -1652,7 +1652,7 @@
 				alert("Format of mail is wrong,please try again!");
 				return;
 			}
-			alert("We received your email !");
+			alert("Thank for subcribe!");
 		}
 	</script>
 </body>
